packages/shell/src/components/ContextMenu/ContextMenu.module.css
.contextMenu {
  --additional-shadow: 0 0 0 0 transparent;
  position: fixed;
  z-index: 99999;
  min-width: 16rem;
  padding: 0.5rem;
  user-select: none;
  -webkit-user-select: none;
  background-color: hsla(var(--app-color-light-hsl), 0.3);
  backdrop-filter: blur(15px);
  -webkit-backdrop-filter: blur(15px);
  border-radius: 0.5rem;
  box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 11px 0px, var(--additional-shadow);
}

body.dark .contextMenu {
  --additional-shadow:
    inset 0 0 0 0.9px hsla(var(--app-color-dark-hsl), 0.3),
    0 0 0 1.2px hsla(var(--app-color-light-hsl), 0.3);
}

.item {
  display: flex;
  justify-content: flex-start;
  width: 100%;
  padding: 0.3rem 0.4rem;
  margin: 0.2rem 0;
  letter-spacing: 0.4px;
  font-weight: 400;
  font-size: 0.875rem;
  border-radius: 0.3rem;
  border: none;
  background: none;
  text-align: left;
  cursor: default;
  font-family: var(--app-font-family);
  color: hsla(var(--app-color-dark-hsl), 1);
  transition: none;
}

.item:hover {
  background-color: var(--app-color-primary);
  color: var(--app-color-primary-contrast);
}

.separator {
  width: 100%;
  height: 0.2px;
  background-color: hsla(var(--app-color-dark-hsl), 0.2);
  margin: 2px 0;
  border: none;
}

